--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -20,7 +20,7 @@ jobs:
 
       # 3. Install npm dependencies
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       # 4. Add Provisioning Profile
       - name: Add Provisioning Profile
