--- a/.github/workflows/build_sign_ios.yml
+++ b/.github/workflows/build_sign_ios.yml
@@ -4,27 +4,29 @@ on:
   workflow_dispatch:
 
 jobs:
+  # -------------------------------
   # Job 1: Generate .p12 on Ubuntu
+  # -------------------------------
   generate-p12:
     runs-on: ubuntu-latest
     outputs:
-      p12-artifact: ${{ steps.upload.outputs.artifact-path }}
+      p12-path: ios_cert.p12
     steps:
       - uses: actions/checkout@v4
 
-      # Decode private key
+      # 1. Save private key from secret
       - name: Save Signing Key
         run: echo "${{ secrets.APPLE_SIGNING_KEY }}" > ios_signing.key
 
-      # Decode Apple .cer
+      # 2. Save Apple certificate from secret
       - name: Save Apple Certificate
         run: echo "${{ secrets.APPLE_CERT_BASE64 }}" | base64 -d > ios_cert.cer
 
-      # Convert .cer to PEM
+      # 3. Convert .cer to .pem
       - name: Convert CER to PEM
         run: openssl x509 -in ios_cert.cer -inform DER -out ios_cert.pem -outform PEM
 
-      # Export .p12
+      # 4. Export .p12 with password from secret
       - name: Export P12
         run: |
           openssl pkcs12 -export \
@@ -33,36 +35,37 @@ jobs:
             -out ios_cert.p12 \
             -password pass:${{ secrets.P12_PASSWORD }}
 
-      # Upload .p12 as artifact
+      # 5. Upload .p12 as artifact
       - name: Upload P12 artifact
-        id: upload
         uses: actions/upload-artifact@v4
         with:
           name: ios-p12
           path: ios_cert.p12
 
-  # Job 2: Build and sign on macOS
+  # -------------------------------
+  # Job 2: Build & Sign on macOS
+  # -------------------------------
   build-ios:
     runs-on: macos-latest
     needs: generate-p12
     steps:
       - uses: actions/checkout@v4
 
-      # Download the .p12 artifact from previous job
-      - name: Download P12
+      # 1. Download the .p12 artifact
+      - name: Download P12 artifact
         uses: actions/download-artifact@v4
         with:
           name: ios-p12
           path: ios-p12
 
-      # Save Provisioning Profile
+      # 2. Save Provisioning Profile
       - name: Add Provisioning Profile
         run: |
           echo "${{ secrets.APPLE_PROVISION_PROFILE }}" | base64 -d > managerXApp.mobileprovision
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp managerXApp.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
 
-      # Install .p12 certificate in keychain
+      # 3. Install certificate in keychain
       - name: Install Certificate
         run: |
           security create-keychain -p "" build.keychain
@@ -72,17 +75,17 @@ jobs:
           security unlock-keychain -p "" ~/Library/Keychains/build.keychain
           security set-key-partition-list -S apple-tool:,apple: -s -k "" ~/Library/Keychains/build.keychain
 
-      # Setup Node.js
+      # 4. Setup Node.js
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # Install npm dependencies
+      # 5. Install npm dependencies
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      # Build Ionic Capacitor iOS app
+      # 6. Build Ionic Capacitor iOS app
       - name: Build Ionic Capacitor iOS
         run: |
           npm run build
@@ -90,7 +93,7 @@ jobs:
           cd ios/App
           xcodebuild -workspace App.xcworkspace -scheme App -configuration Release archive -archivePath $PWD/build/App.xcarchive
 
-      # Export signed IPA
+      # 7. Export signed IPA
       - name: Export IPA
         run: |
           xcodebuild -exportArchive \
@@ -98,7 +101,7 @@ jobs:
             -exportOptionsPlist ios/App/exportOptions.plist \
             -exportPath ios/App/output
 
-      # Upload IPA artifact
+      # 8. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
