--- a/.github/workflows/build_sign_ios.yml
+++ b/.github/workflows/build_sign_ios.yml
@@ -7,21 +7,23 @@ jobs:
   build-ios:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v4
+      # 1. Checkout repo
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      # 1. Save private key
+      # 2. Save Signing Key
       - name: Save Signing Key
         run: echo "${{ secrets.APPLE_SIGNING_KEY }}" > ios_signing.key
 
-      # 2. Save Apple Certificate
+      # 3. Save Apple Certificate
       - name: Save Apple Certificate
         run: echo "${{ secrets.APPLE_CERT_BASE64 }}" | base64 -d > ios_cert.cer
 
-      # 3. Convert .cer to .pem (optional)
+      # 4. Convert CER to PEM
       - name: Convert CER to PEM
         run: openssl x509 -in ios_cert.cer -inform DER -out ios_cert.pem -outform PEM
 
-      # 4. Export .p12 **on macOS**
+      # 5. Export .p12 on macOS
       - name: Export P12
         run: |
           openssl pkcs12 -export \
@@ -30,7 +32,7 @@ jobs:
             -out ios_cert.p12 \
             -password pass:Infy17cre@t
 
-      # 5. Install certificate
+      # 6. Install Certificate in Keychain
       - name: Install Certificate
         run: |
           security create-keychain -p "" build.keychain
@@ -40,35 +42,47 @@ jobs:
           security unlock-keychain -p "" ~/Library/Keychains/build.keychain
           security set-key-partition-list -S apple-tool:,apple: -s -k "" ~/Library/Keychains/build.keychain
 
-      # 6. Save Provisioning Profile
+      # 7. Add Provisioning Profile
       - name: Add Provisioning Profile
         run: |
           echo "${{ secrets.APPLE_PROVISION_PROFILE }}" | base64 -d > managerXApp.mobileprovision
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp managerXApp.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
 
-      # 7. Setup Node and dependencies
-      - uses: actions/setup-node@v4
+      # 8. Setup Node.js
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm install --legacy-peer-deps
 
-      # 8. Build Ionic Capacitor iOS app
-      - run: |
+      # 9. Install dependencies
+      - name: Install npm dependencies
+        run: npm install --legacy-peer-deps
+
+      # 10. Patch PrimeNG dynamicdialog for Angular 20
+      - name: Patch PrimeNG dynamicdialog-injector
+        run: |
+          sed -i '' 's/, InjectFlags//' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
+
+      # 11. Build Ionic Capacitor iOS
+      - name: Build Ionic Capacitor iOS
+        run: |
           npm run build
           npx cap sync ios
           cd ios/App
           xcodebuild -workspace App.xcworkspace -scheme App -configuration Release archive -archivePath $PWD/build/App.xcarchive
 
-      # 9. Export IPA
-      - run: |
+      # 12. Export signed IPA
+      - name: Export IPA
+        run: |
           xcodebuild -exportArchive \
             -archivePath ios/App/build/App.xcarchive \
             -exportOptionsPlist ios/App/exportOptions.plist \
             -exportPath ios/App/output
 
-      # 10. Upload IPA
-      - uses: actions/upload-artifact@v4
+      # 13. Upload IPA artifact
+      - name: Upload IPA
+        uses: actions/upload-artifact@v4
         with:
           name: ios-ipa
           path: ios/App/output/*.ipa
