--- a/.github/workflows/build_sign_ios - Copy.yml
+++ b/.github/workflows/build_sign_ios - Copy.yml
@@ -21,73 +21,35 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      # 4. Patch PrimeNG dynamicdialog-injector for Angular 20
+      # 4. Patch PrimeNG for Angular 20
       - name: Patch PrimeNG
         run: |
           sed -i '' 's/, InjectFlags//' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
           sed -i '' 's/| InjectFlags//g' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
 
-      # 5. Add Provisioning Profile
+      # 5. Copy Provisioning Profile from repo
       - name: Add Provisioning Profile
         run: |
-          echo "${{ secrets.APPLE_PROVISION_PROFILE }}" | base64 -d > managerXApp.mobileprovision
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp managerXApp.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
+          cp ios/certs/managerXApp.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
 
-      # 6. Save Signing Key
-      - name: Save Signing Key
-        run: echo "${{ secrets.APPLE_SIGNING_KEY }}" > ios_signing.key
-
-      # 7. Save Apple Certificate
-      - name: Save Apple Certificate
-        run: echo "${{ secrets.APPLE_CERT_BASE64 }}" | base64 -d > ios_cert.cer
-
-      # 8. Convert CER to PEM
-      - name: Convert CER to PEM
-        run: openssl x509 -in ios_cert.cer -inform DER -out ios_cert.pem -outform PEM
-
-      # 9. Export .p12 (hardcoded password)
-      - name: Export P12
-        run: |
-          openssl pkcs12 -export \
-            -inkey ios_signing.key \
-            -in ios_cert.pem \
-            -out ios_cert.p12 \
-            -password pass:Infy17cre@t
-
-      # 10. Install Certificate in Keychain
+      # 6. Install Certificate in Keychain
       - name: Install Certificate
         run: |
           security create-keychain -p "" build.keychain
-          security import ios_cert.p12 -k ~/Library/Keychains/build.keychain -P "Infy17cre@t" -T /usr/bin/codesign
+          security import ios/certs/ios_cert.p12 -k ~/Library/Keychains/build.keychain -P "Infy17cre@t" -T /usr/bin/codesign
           security list-keychains -s ~/Library/Keychains/build.keychain
           security default-keychain -s ~/Library/Keychains/build.keychain
           security unlock-keychain -p "" ~/Library/Keychains/build.keychain
           security set-key-partition-list -S apple-tool:,apple: -s -k "" ~/Library/Keychains/build.keychain
 
-      # 11. Install Fastlane
-      - name: Install Fastlane
-        run: sudo gem install fastlane -v 2.228.0
-
-      # 12. Match App Store Certificates (directly, no Gemfile)
-      - name: Match App Store Certificates
-        env:
-          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
-        run: |
-          fastlane match appstore \
-            --git_url https://github.com/Rashmal/managerXApp.git \
-            --app_identifier com.yourcompany.managerXApp \
-            --team_id NPXC63W394 \
-            --readonly \
-            --verbose
-
-      # 13. Build Ionic iOS App
+      # 7. Build Ionic iOS App
       - name: Build Ionic iOS App
         run: |
           npm run build
           npx cap sync ios
 
-      # 14. Archive with Xcode (manual signing)
+      # 8. Archive with Xcode (manual signing)
       - name: Archive iOS App
         run: |
           cd ios/App
@@ -100,7 +62,7 @@ jobs:
             CODE_SIGN_STYLE=Manual \
             clean archive
 
-      # 15. Export signed IPA
+      # 9. Export signed IPA
       - name: Export IPA
         run: |
           cd ios/App
@@ -109,7 +71,7 @@ jobs:
             -exportOptionsPlist exportOptions.plist \
             -exportPath output
 
-      # 16. Upload IPA artifact
+      # 10. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
